fixed the nearly invisible cancel button in the media toolbar present when choosing slideshow items
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@453 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a.css
+++ b/web/css/a.css
@@ -3203,6 +3203,13 @@ clear: both;
 {
 	background: none !important;
 	padding: 0 !important;
+	color: #900 !important;
+	text-shadow: none;
+}
+
+.a-media-toolbar h3 .a-cancel:hover
+{
+	color: #333 !important;
 }
 
 .a-media-item
